bug fixes & performance improvements
